replace the collections with guava